test_final_results_v2.txt
============================= test session starts =============================
platform win32 -- Python 3.14.3, pytest-9.0.2, pluggy-1.6.0
django: version: 5.0.14, settings: app.settings (from ini)
rootdir: C:\pfc\kwanzaConnect-project\kwanzaConnect-API
configfile: pytest.ini
plugins: Faker-40.12.0, cov-7.1.0, django-4.12.0, mock-3.15.1
collected 20 items / 1 error

=================================== ERRORS ====================================
___________ ERROR collecting audit/tests/unit/test_audit_service.py ___________
venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\HP\AppData\Local\Programs\Python\Python314\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1314: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:491: in _call_with_frames_removed
    ???
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1314: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:491: in _call_with_frames_removed
    ???
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
<frozen importlib._bootstrap_external>:755: in exec_module
    ???
<frozen importlib._bootstrap_external>:893: in get_code
    ???
<frozen importlib._bootstrap_external>:823: in source_to_code
    ???
<frozen importlib._bootstrap>:491: in _call_with_frames_removed
    ???
E   SyntaxError: source code string cannot contain null bytes
=========================== short test summary info ===========================
ERROR audit/tests/unit/test_audit_service.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.82s ===============================
